# fastmail-tools

./: .envrc  .gitignore  README.md  devenv.nix  pyproject.toml
fastmail_tools/: main.py
