[tool.poetry]
name = "fastmail-tools"
version = "0.1.0"
description = "Small tools and scripts for interacting with Fastmail via JMAP"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jmapc = "^0.2.18"
rich = "^13.7.0"
textual = "^0.46.0"
structlog = "^23.2.0"
typer = "^0.9.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastmail-tools = "fastmail_tools.main:app"

[tool.mypy]
plugins = "pydantic.mypy"
